syntax = "proto3";

package yaml;

import "yaml/value.proto";

option go_package = "github.com/Jumpaku/eyamlate/golang/yaml";

service Decoder {
  rpc Decode(DecodeInput) returns (DecodeOutput) {}
}

message DecodeInput {
  string yaml = 1;
}

message DecodeOutput {
  bool is_error = 1;
  string error_message = 2;
  Value value = 3;
}
